com-at/build/log/idf_py_stderr_output_698567
In file included from /home/eunous/esp-idf/components/esp_driver_uart/include/driver/uart.h:9,
                 from /home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c:3:
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c: In function 'at_handle_bleinit':
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c:61:21: error: implicit declaration of function 'esp_nimble_hci_and_controller_init' [-Werror=implicit-function-declaration]
   61 |     ESP_ERROR_CHECK(esp_nimble_hci_and_controller_init());
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/eunous/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c: In function 'at_handle_blestop':
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c:91:5: error: implicit declaration of function 'esp_nimble_hci_and_controller_deinit' [-Werror=implicit-function-declaration]
   91 |     esp_nimble_hci_and_controller_deinit();
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c: At top level:
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c:17:21: warning: 'ble_task_handle' defined but not used [-Wunused-variable]
   17 | static TaskHandle_t ble_task_handle = NULL;
      |                     ^~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/at_ble/CMakeFiles/__idf_at_ble.dir/build.make:76: esp-idf/at_ble/CMakeFiles/__idf_at_ble.dir/at_ble.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5745: esp-idf/at_ble/CMakeFiles/__idf_at_ble.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
